Increase letter size to fix issue on Safari iPhone

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,5 @@
 $letter-width: 8.27in;
-$letter-height: 11.69in;
+$letter-height: 12in; // TODO: investigate issue with 11.69in on Safari iPhone
 
 $page-spacing: 14pt;
 $column-section-spacing: 4rem;
